--- a/PlotBot/PlotBot.ipynb
+++ b/PlotBot/PlotBot.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
     "        #get the list of mentioned users\n",
     "        #Note. for some reason `row` returns a string type variable and not list\n",
     "        #therefore using ast.literal_eval function to convert it to list\n",
-    "        print(row['mentioned_users'])\n",
+    "        \n",
     "        if row['mentioned_users']:\n",
     "            mentioned_users = ast.literal_eval(str(row['mentioned_users']))\n",
     "        \n",
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -335,35 +335,51 @@
      "output_type": "stream",
      "text": [
       "Initializing worker:\n",
-      "getMentions: Got response with 3 tweet(s)\n",
-      "rwCSV: returning new DF with columns: ['mention_tweet_id', 'text', 'mentioned_users', 'mention_date', 'mention_user_id', 'mention_user_name', 'full_response']\n",
+      "getMentions: Got response with 4 tweet(s)\n",
+      "rwCSV: returning DF from CSV\n",
+      "getMentions: adding mention id: 80067314\n",
       "getMentions: adding mention id: 17842366\n",
+      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
       "getMentions: adding mention id: 979490736013021184\n",
+      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
       "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
       "getMentions: saving new mentions to CSV\n",
-      "rwCSV: saved 2 row(s) as new file to 'results/mentions.csv'\n",
+      "rwCSV: appended 1 row(s) to 'results/mentions.csv'\n",
       "worker: trying to read analyzed CSV\n",
-      "rwCSV: returning new DF with columns: ['user_id', 'user_name']\n",
+      "rwCSV: returning DF from CSV\n",
       "[17842366]\n",
-      "worker: performing sentiment analysis for user_id 17842366\n",
-      "getSentiment: trying to obtain tweets for user id 17842366, page 1\n",
-      "getSentiment: trying to obtain tweets for user id 17842366, page 2\n",
-      "getSentiment: trying to obtain tweets for user id 17842366, page 3\n",
-      "getSentiment: trying to obtain tweets for user id 17842366, page 4\n",
-      "getSentiment: trying to obtain tweets for user id 17842366, page 5\n",
-      "worker: performed sentiment analysis for user_id 17842366\n",
-      "worker: generated and tweeted graph for @Discovery\n",
-      "rwCSV: saved 1 row(s) as new file to 'results/analyzed.csv'\n",
+      "worker: user id: 17842366 has already been analyzed\n",
       "[979490736013021184]\n",
-      "worker: performing sentiment analysis for user_id 979490736013021184\n",
-      "getSentiment: trying to obtain tweets for user id 979490736013021184, page 1\n",
-      "getSentiment: trying to obtain tweets for user id 979490736013021184, page 2\n",
-      "getSentiment: trying to obtain tweets for user id 979490736013021184, page 3\n",
-      "getSentiment: trying to obtain tweets for user id 979490736013021184, page 4\n",
-      "getSentiment: trying to obtain tweets for user id 979490736013021184, page 5\n",
-      "worker: performed sentiment analysis for user_id 979490736013021184\n",
-      "worker: generated and tweeted graph for @Sonik_Belka\n",
-      "rwCSV: appended 2 row(s) to 'results/analyzed.csv'\n"
+      "worker: user id: 979490736013021184 has already been analyzed\n",
+      "[80067314]\n",
+      "worker: performing sentiment analysis for user_id 80067314\n",
+      "getSentiment: trying to obtain tweets for user id 80067314, page 1\n",
+      "getSentiment: trying to obtain tweets for user id 80067314, page 2\n",
+      "getSentiment: trying to obtain tweets for user id 80067314, page 3\n",
+      "getSentiment: trying to obtain tweets for user id 80067314, page 4\n",
+      "getSentiment: trying to obtain tweets for user id 80067314, page 5\n",
+      "worker: performed sentiment analysis for user_id 80067314\n",
+      "worker: generated and tweeted graph for @ITSJPODirector\n",
+      "rwCSV: appended 4 row(s) to 'results/analyzed.csv'\n",
+      "Initializing worker:\n",
+      "getMentions: Got response with 4 tweet(s)\n",
+      "rwCSV: returning DF from CSV\n",
+      "getMentions: adding mention id: 80067314\n",
+      "getMentions: Tweet id: 985700911614918658 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 17842366\n",
+      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 979490736013021184\n",
+      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: No new mentions\n",
+      "worker: trying to read analyzed CSV\n",
+      "rwCSV: returning DF from CSV\n",
+      "[17842366]\n",
+      "worker: user id: 17842366 has already been analyzed\n",
+      "[979490736013021184]\n",
+      "worker: user id: 979490736013021184 has already been analyzed\n",
+      "[80067314]\n",
+      "worker: user id: 80067314 has already been analyzed\n"
      ]
     },
     {
@@ -373,7 +389,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-163-5624cac36140>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Initializing worker:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mworker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-164-5624cac36140>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Initializing worker:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mworker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -385,6 +401,16 @@
     "        print('Initializing worker:')\n",
     "        worker()\n",
     "        sleep(300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trends\n",
+    "1. Bot of a fellow student appeares to be tweeting neutral texts\n",
+    "2. @Discovery tends to be more positive\n",
+    "3. @ITSJPODirector is vastly positive on twitter"
    ]
   },
   {
