--- a/PlotBot/PlotBot.ipynb
+++ b/PlotBot/PlotBot.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,10 +292,12 @@
     "    mentions_df = getMentions()\n",
     "\n",
     "    #setup resulting CSV\n",
-    "    path = 'results/analyzed.csv'\n",
-    "    columns = ['user_id','user_name']\n",
+    "    path_to_analyzed = 'results/analyzed.csv'\n",
+    "    path_to_sentiment = 'results/sentiment.csv'\n",
+    "    columns_analyzed = ['user_id','user_name']\n",
+    "    columns_sentiment = ['compound', 'tweet']\n",
     "    print('worker: trying to read analyzed CSV')\n",
-    "    analyzed_df = rwCSV(path,columns=columns)\n",
+    "    analyzed_df = rwCSV(path,columns=columns_analyzed)\n",
     "\n",
     "    #got through not analyzed rows\n",
     "    for index, row in mentions_df.iterrows():\n",
@@ -305,12 +307,13 @@
     "        \n",
     "        if row['mentioned_users']:\n",
     "            mentioned_users = ast.literal_eval(str(row['mentioned_users']))\n",
-    "        \n",
     "            #loop through the list to analyse tweets and post graphs\n",
     "            for mentioned_user in mentioned_users:\n",
     "                if mentioned_user not in analyzed_df['user_id'].tolist():\n",
     "                    print(f'worker: performing sentiment analysis for user_id {mentioned_user}')\n",
     "                    sentiment = getSentiment(mentioned_user,pages=5)\n",
+    "                    rwCSV(path_to_sentiment,'w',df=sentiment,columns = columns_sentiment)\n",
+    "\n",
     "                    print(f'worker: performed sentiment analysis for user_id {mentioned_user}')\n",
     "                    mentioned_user_name = makeGraph(sentiment,mentioned_user)\n",
     "                    print(f'worker: generated and tweeted graph for @{mentioned_user_name}')\n",
@@ -319,7 +322,7 @@
     "                    analyzed_df = analyzed_df.append({'user_name':mentioned_user_name,\n",
     "                                                      'user_id':mentioned_user\n",
     "                                                      },ignore_index=True)\n",
-    "                    rwCSV(path,'w',analyzed_df,columns)\n",
+    "                    rwCSV(path_to_analyzed,'w',analyzed_df,columns)\n",
     "                else:\n",
     "                    print(f'worker: user id: {mentioned_user} has already been analyzed')\n",
     "            "
@@ -327,40 +330,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['compound', 'tweet'], dtype='object')"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initializing worker:\n",
-      "getMentions: Got response with 4 tweet(s)\n",
-      "rwCSV: returning DF from CSV\n",
-      "getMentions: adding mention id: 80067314\n",
-      "getMentions: adding mention id: 17842366\n",
-      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 979490736013021184\n",
-      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: saving new mentions to CSV\n",
-      "rwCSV: appended 1 row(s) to 'results/mentions.csv'\n",
-      "worker: trying to read analyzed CSV\n",
-      "rwCSV: returning DF from CSV\n",
-      "[17842366]\n",
-      "worker: user id: 17842366 has already been analyzed\n",
-      "[979490736013021184]\n",
-      "worker: user id: 979490736013021184 has already been analyzed\n",
-      "[80067314]\n",
-      "worker: performing sentiment analysis for user_id 80067314\n",
-      "getSentiment: trying to obtain tweets for user id 80067314, page 1\n",
-      "getSentiment: trying to obtain tweets for user id 80067314, page 2\n",
-      "getSentiment: trying to obtain tweets for user id 80067314, page 3\n",
-      "getSentiment: trying to obtain tweets for user id 80067314, page 4\n",
-      "getSentiment: trying to obtain tweets for user id 80067314, page 5\n",
-      "worker: performed sentiment analysis for user_id 80067314\n",
-      "worker: generated and tweeted graph for @ITSJPODirector\n",
-      "rwCSV: appended 4 row(s) to 'results/analyzed.csv'\n",
       "Initializing worker:\n",
       "getMentions: Got response with 4 tweet(s)\n",
       "rwCSV: returning DF from CSV\n",
@@ -374,23 +370,9 @@
       "getMentions: No new mentions\n",
       "worker: trying to read analyzed CSV\n",
       "rwCSV: returning DF from CSV\n",
-      "[17842366]\n",
       "worker: user id: 17842366 has already been analyzed\n",
-      "[979490736013021184]\n",
       "worker: user id: 979490736013021184 has already been analyzed\n",
-      "[80067314]\n",
       "worker: user id: 80067314 has already been analyzed\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-164-5624cac36140>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Initializing worker:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mworker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
