--- a/PlotBot/PlotBot.ipynb
+++ b/PlotBot/PlotBot.ipynb
@@ -63,15 +63,8 @@
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime\n",
     "import ast\n",
-    "from time import sleep"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from time import sleep\n",
+    "\n",
     "# Twitter API Keys\n",
     "consumer_key = consumer_key\n",
     "consumer_secret = consumer_secret\n",
@@ -336,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +351,122 @@
       "rwCSV: returning DF from CSV\n",
       "worker: user id: 17842366 has already been analyzed\n",
       "worker: user id: 979490736013021184 has already been analyzed\n",
-      "worker: user id: 80067314 has already been analyzed\n"
+      "worker: user id: 80067314 has already been analyzed\n",
+      "Initializing worker:\n",
+      "getMentions: Got response with 5 tweet(s)\n",
+      "rwCSV: returning DF from CSV\n",
+      "getMentions: adding mention id: 25073877\n",
+      "getMentions: adding mention id: 80067314\n",
+      "getMentions: Tweet id: 985700911614918658 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 17842366\n",
+      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 979490736013021184\n",
+      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: saving new mentions to CSV\n",
+      "rwCSV: appended 1 row(s) to 'results/mentions.csv'\n",
+      "worker: trying to read analyzed CSV\n",
+      "rwCSV: returning DF from CSV\n",
+      "worker: user id: 17842366 has already been analyzed\n",
+      "worker: user id: 979490736013021184 has already been analyzed\n",
+      "worker: user id: 80067314 has already been analyzed\n",
+      "worker: performing sentiment analysis for user_id 25073877\n",
+      "getSentiment: trying to obtain tweets for user id 25073877, page 1\n",
+      "getSentiment: trying to obtain tweets for user id 25073877, page 2\n",
+      "getSentiment: trying to obtain tweets for user id 25073877, page 3\n",
+      "getSentiment: trying to obtain tweets for user id 25073877, page 4\n",
+      "getSentiment: trying to obtain tweets for user id 25073877, page 5\n",
+      "rwCSV: appended 500 row(s) to 'results/sentiment.csv'\n",
+      "worker: performed sentiment analysis for user_id 25073877\n",
+      "worker: generated and tweeted graph for @realDonaldTrump\n",
+      "rwCSV: appended 7 row(s) to 'results/analyzed.csv'\n",
+      "Initializing worker:\n",
+      "getMentions: Got response with 5 tweet(s)\n",
+      "rwCSV: returning DF from CSV\n",
+      "getMentions: adding mention id: 25073877\n",
+      "getMentions: Tweet id: 985713452370055172 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 80067314\n",
+      "getMentions: Tweet id: 985700911614918658 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 17842366\n",
+      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 979490736013021184\n",
+      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: No new mentions\n",
+      "worker: trying to read analyzed CSV\n",
+      "rwCSV: returning DF from CSV\n",
+      "worker: user id: 17842366 has already been analyzed\n",
+      "worker: user id: 979490736013021184 has already been analyzed\n",
+      "worker: user id: 80067314 has already been analyzed\n",
+      "worker: user id: 25073877 has already been analyzed\n",
+      "Initializing worker:\n",
+      "getMentions: Got response with 5 tweet(s)\n",
+      "rwCSV: returning DF from CSV\n",
+      "getMentions: adding mention id: 25073877\n",
+      "getMentions: Tweet id: 985713452370055172 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 80067314\n",
+      "getMentions: Tweet id: 985700911614918658 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 17842366\n",
+      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 979490736013021184\n",
+      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: No new mentions\n",
+      "worker: trying to read analyzed CSV\n",
+      "rwCSV: returning DF from CSV\n",
+      "worker: user id: 17842366 has already been analyzed\n",
+      "worker: user id: 979490736013021184 has already been analyzed\n",
+      "worker: user id: 80067314 has already been analyzed\n",
+      "worker: user id: 25073877 has already been analyzed\n",
+      "Initializing worker:\n",
+      "getMentions: Got response with 5 tweet(s)\n",
+      "rwCSV: returning DF from CSV\n",
+      "getMentions: adding mention id: 25073877\n",
+      "getMentions: Tweet id: 985713452370055172 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 80067314\n",
+      "getMentions: Tweet id: 985700911614918658 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 17842366\n",
+      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 979490736013021184\n",
+      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: No new mentions\n",
+      "worker: trying to read analyzed CSV\n",
+      "rwCSV: returning DF from CSV\n",
+      "worker: user id: 17842366 has already been analyzed\n",
+      "worker: user id: 979490736013021184 has already been analyzed\n",
+      "worker: user id: 80067314 has already been analyzed\n",
+      "worker: user id: 25073877 has already been analyzed\n",
+      "Initializing worker:\n",
+      "getMentions: Got response with 5 tweet(s)\n",
+      "rwCSV: returning DF from CSV\n",
+      "getMentions: adding mention id: 25073877\n",
+      "getMentions: Tweet id: 985713452370055172 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 80067314\n",
+      "getMentions: Tweet id: 985700911614918658 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 17842366\n",
+      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 979490736013021184\n",
+      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: No new mentions\n",
+      "worker: trying to read analyzed CSV\n",
+      "rwCSV: returning DF from CSV\n",
+      "worker: user id: 17842366 has already been analyzed\n",
+      "worker: user id: 979490736013021184 has already been analyzed\n",
+      "worker: user id: 80067314 has already been analyzed\n",
+      "worker: user id: 25073877 has already been analyzed\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-222-5624cac36140>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Initializing worker:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mworker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
